--- a/l_mupotsa_ml_ai_handson.ipynb
+++ b/l_mupotsa_ml_ai_handson.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdy+inZOrnOOdke+rdLX3B",
+      "authorship_tag": "ABX9TyNLZf03JvKZuImZHF9epIRn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "28df497d-0363-4034-9b76-c83f9769c60e"
+        "outputId": "80fb58fe-5203-4e3f-bc0e-ed6110075a93"
       },
       "outputs": [
         {
@@ -46,7 +46,10 @@
         }
       ],
       "source": [
-        "print(\"Check connection done \")"
+        "print(\"Check connection done \")\n",
+        "\n",
+        "# Added some changes\n",
+        "# Made another change"
       ]
     }
   ]
